# vision_pilot

./: .gitignore  .pre-commit-config.yaml  README.md
Calibration/: README.md  calc_front_camera_homography.py
Docker/: Dockerfile  README.md  build.sh  build_and_test.sh  entrypoint.sh  run.sh
Models/model_library/AutoDrive/: README.md
Sensing/: README.md
Simulation/: README.md
Simulation/CARLA/: README.md
Simulation/CARLA/ROS2/: README.md  build_bridge.sh  drive.sh  gen_carla_C_matrix.py  ros_carla_config.py  run_visionpilot.sh
Simulation/CARLA/ROS2/config/: H_carla.yaml  PathFinder.rviz  VisionPilot_carla10.json  VisionPilot_carla9.json  plotjuggler.xml
Simulation/CARLA/ROS2/docker/control_bridge/: Dockerfile  bridge_logic.py  build.sh  control_bridge.py  run.sh  test_control_bridge.py
Simulation/CARLA/ROS2/docker/control_bridge/carla_msgs/: package.xml
Simulation/CARLA/ROS2/docker/odom_bridge/: .gitignore  Dockerfile  run.sh  (+2 more)
Simulation/CARLA/ROS2/src/carla_control_publisher/: README.md  package.xml  setup.cfg  setup.py
Simulation/CARLA/ROS2/src/vision_pilot_bringup/: README.md  package.xml  setup.py
Simulation/CARLA/ROS2/src/vision_pilot_bringup/launch/: demo_carla10_launch.py  demo_carla9_launch.py
Simulation/CARLA/Zenoh/: .gitignore  README.md  justfile
Simulation/CARLA/Zenoh/carla_video_pubsub/: CMakeLists.txt  carla_depth_subscriber.cpp  carla_segment_subscriber.cpp  carla_video_subscriber.cpp
Simulation/CARLA/Zenoh/models/: CMakeLists.txt  carla_run_model.cpp
Simulation/SODA.Sim/: README.md
Simulation/SODA.Sim/VisionPilot/: homography_sodasim.yaml  visionpilot_sodasim.conf.example
Simulation/SODA.Sim/ros2_gstreamer/: CMakeLists.txt  README.md
Simulation/SODA.Sim/ros2_gstreamer/launch/: image_to_gstreamer.launch.py
VisionPilot/: CMakeLists.txt  README.md  package.xml
VisionPilot/Docker/: Dockerfile  Dockerfile.carla-gpu  Dockerfile.carla-gpu.dockerignore  Dockerfile.dockerignore  Dockerfile.ros2  Dockerfile.ros2.dockerignore  README.md  build-carla-gpu.sh  build.sh  run-carla-gpu.sh  run.sh
VisionPilot/app/: CMakeLists.txt  vision_pilot.cpp
VisionPilot/config/: vision_pilot.conf  vision_pilot.conf.example  vision_pilot_carla.conf.example
VisionPilot/development_releases/1.0/: CMakeLists.txt
VisionPilot/development_releases/1.0/app/: CMakeLists.txt  vision_pilot.cpp
VisionPilot/development_releases/1.0/config/: vehicle_dbc.json
VisionPilot/development_releases/1.0/modules/safety_guardian/fusion/: CMakeLists.txt
VisionPilot/development_releases/1.0/modules/safety_guardian/fusion/src/: lateral_fusion.cpp  longitudinal_fusion.cpp
VisionPilot/development_releases/1.0/modules/safety_guardian/fusion/tracking/include/tracking/: cipo_history.hpp  feature_matching_utils.hpp  kalman_filter.hpp  object_finder.hpp  tracking_utils.hpp
VisionPilot/development_releases/1.0/modules/safety_guardian/fusion/tracking/src/: cipo_history.cpp  feature_matching_utils.cpp  kalman_filter.cpp  object_finder.cpp  tracking_utils.cpp
VisionPilot/development_releases/1.0/modules/sensing/can_interface/: CMakeLists.txt  main.cpp
VisionPilot/development_releases/1.0/modules/sensing/can_interface/include/: can_config.hpp  can_reader.hpp  can_writer.hpp
VisionPilot/development_releases/1.0/modules/sensing/can_interface/src/: can_config.cpp  can_reader.cpp  can_writer.cpp
VisionPilot/development_releases/1.0/tests/visualization/: CMakeLists.txt  test_visualization.cpp
VisionPilot/development_releases/1.0/tests/visualization/test_assets/: test_upstream_data.yaml
VisionPilot/modules/common/: CMakeLists.txt
VisionPilot/modules/config/: CMakeLists.txt
VisionPilot/modules/config/src/: vision_pilot_config.cpp
VisionPilot/modules/control/: README.md
VisionPilot/modules/control/src/: control_bridge.cpp
VisionPilot/modules/debug/src/: debug_draw.cpp
VisionPilot/modules/logging/: CMakeLists.txt
VisionPilot/modules/logging/include/logging/: logger.hpp
VisionPilot/modules/logging/src/: logger.cpp
VisionPilot/modules/middleware_interfaces/ros2_interface/control_cmd_publisher/: CMakeLists.txt  README.md
VisionPilot/modules/middleware_interfaces/ros2_interface/control_cmd_publisher/include/control_cmd_publisher/: cmd_to_ros2.hpp
VisionPilot/modules/middleware_interfaces/ros2_interface/control_cmd_publisher/src/: cmd_to_ros2.cpp
VisionPilot/modules/middleware_interfaces/ros2_interface/vehicle_state_subscriber/: CMakeLists.txt  README.md
VisionPilot/modules/middleware_interfaces/ros2_interface/vehicle_state_subscriber/src/: ros2_to_can.cpp
VisionPilot/modules/models/: CMakeLists.txt
VisionPilot/modules/models/src/: inference.cpp
VisionPilot/modules/safety_guardian/planning/: CMakeLists.txt
VisionPilot/modules/safety_guardian/planning/include/planning/: longitudinal_planning.hpp  planning.hpp
VisionPilot/modules/safety_guardian/planning/src/: longitudinal_planning.cpp  planning.cpp
VisionPilot/modules/sensing/camera_interface/: CMakeLists.txt
VisionPilot/modules/visualization/: CMakeLists.txt
VisionPilot/modules/visualization/include/visualization/: local_display.hpp  visual_interface.hpp  visualization.hpp  webrtc_stream.hpp
VisionPilot/modules/visualization/src/: local_display.cpp  visual_interface.cpp  visualization.cpp  webrtc_stream.cpp
VisionPilot/scripts/: convert_rerun_logs.py  find_homography_C_matrix.py  gen_carla_homography.py
VisionPilot/software_defined_vehicle/OpenADKit/EgoLanes/: README.md  launch-egolanes.sh
VisionPilot/tests/: CMakeLists.txt
VisionPilot/tests/app/: test_vision_pilot.cpp
VisionPilot/tests/config/: CMakeLists.txt  test_config.cpp
VisionPilot/tests/control/: CMakeLists.txt  test_closed_loop.cpp
VisionPilot/tests/middleware_interfaces/ros2_interface/camera_subscriber/: CMakeLists.txt  test_camera_subscriber.cpp
VisionPilot/tests/middleware_interfaces/ros2_interface/control_cmd_publisher/: CMakeLists.txt  test_control_cmd_publisher.cpp
VisionPilot/tests/safety_guardian/planning/: test_planning.cpp
VisionPilot/tests/visualization/: CMakeLists.txt  test_visualization.cpp
(+59 files in other folders)
