<?xml version="1.0"?>
<package format="3">
  <name>carla_control_publisher</name>
  <version>0.1.0</version>
  <description>carla_control_publisher</description>

  <maintainer email="limjitern@gmail.com">JITERN</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>carla</exec_depend>
  <exec_depend>ros_carla_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
