<?xml version="1.0"?>
<package format="3">
  <name>vision_pilot_bringup</name>
  <version>0.1.0</version>
  <description>vision_pilot_bringup</description>

  <maintainer email="limjitern@gmail.com">JITERN</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>ros2launch</exec_depend>
  
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
